[package]
version = "0.1.0" # remember to update html_root_url
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["development-tools"]
description = "Easily compare two JSON values and get great output"
homepage = "https://github.com/davidpdrsn/assert-json-diff"
keywords = ["serde_json", "json", "testing"]
license = "MIT"
name = "assert-json-diff"
readme = "README.md"
repository = "https://github.com/davidpdrsn/assert-json-diff.git"
documentation = "https://docs.rs/assert-json-diff"
build = "build.rs"

[dependencies]
serde_json = "1.0.32"
serde = "1.0.80"

[dev-dependencies]
version-sync = "0.5"
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"
